# dayu_widgets_tag

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
dayu_widgets_tag/: __init__.py  __version__.py  checkable_tag.py  new_tag.py  tag.py
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/zh-cn/: README.md  _coverpage.md  _sidebar.md
examples/: add_delete.py  basic.py  checkable.py  colorful.py  example.py
