[tool.poetry]
name = "dayu_widgets_tag"
version = "0.1.0"
description = "Tag component for dayu_widgets as a plugin"
homepage = "https://github.com/muyr/dayu_widgets_tag"
repository = "https://github.com/muyr/dayu_widgets_tag"
documentation = "https://muyr.github.io/dayu_widgets_tag/#/"
keywords = ["PySide", "PyQt", "UI", "PySide2", "PyQt5", "Tag"]
authors = ["Yanru Mu  <muyanru345@163.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "dayu_widgets_tag" },
]
[tool.poetry.dependencies]
python = ">=2.7,<2.8 || >=3.6.0,<3.10"
dayu_widgets = "^0.9"
QtPy = "^1.11.3"

[tool.poetry.dev-dependencies]
pytest = {version = "^6.2.5", python = ">=3.6.0,<3.11"}
PySide2 = "^5.15.2"
pytest-qt = {version = "^4.0.2", python = ">=3.6.0,<3.10"}
black = {version = "^21.12b0", python = ">=3.6.2,<3.10"}
isort = {version = "^5.10.1", python = ">=3.6.1,<3.10"}
commitizen = {version = "^2.20.0", python = ">=3.6.1,<3.10"}

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "dayu_widgets_tag/__version__.py"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true
known_first_party = ["dayu_widgets_tag"]

# Enforce import section headers.
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"
import_heading_firstparty = "Import local modules"

force_sort_within_sections = true
force_single_line = true

# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = "*/docs/conf.py"
